# jam

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  LICENSE.md  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  private.pem  public.pem  pyproject.toml  requirements.txt  setup.cfg  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  hotfix.md  idea.md
.github/workflows/: deploy-docs  deploy-docs.yml  pypi-publish.yml  run-tests.yml
LICENSE/: index.html
api/: index.html
api/SUMMARY/: index.html
api/abc_instance/: index.html
api/aio/: index.html
api/base_jam/: index.html
api/encoders/: index.html
api/exceptions/: index.html
api/ext/: index.html
api/instance/: index.html
api/jam.__base__/: index.html
api/jam.__base_encoder__/: index.html
api/jam.__deprecated__/: index.html
api/jam.aio/: index.html
api/jam.aio.__base__/: index.html
api/jam.aio.instance/: index.html
api/jam.aio.jwt/: index.html
api/jam.aio.oauth2/: index.html
api/jam.aio.oauth2.__base__/: index.html
api/jam.aio.oauth2.builtin/: index.html
api/jam.aio.oauth2.builtin.github/: index.html
api/jam.aio.oauth2.builtin.gitlab/: index.html
api/jam.aio.oauth2.builtin.google/: index.html
api/jam.aio.oauth2.builtin.yandex/: index.html
api/jam.aio.oauth2.client/: index.html
api/jam.aio.sessions/: index.html
api/jam.aio.sessions.__base__/: index.html
api/jam.aio.sessions.json/: index.html
api/jam.aio.sessions.redis/: index.html
api/jam.cli/: index.html
api/jam.cli.cli/: index.html
api/jam.cli.commands/: index.html
api/jam.cli.commands.keys/: index.html
api/jam.cli.commands.password/: index.html
api/jam.encoders/: index.html
api/jam.exceptions/: index.html
api/jam.exceptions.base/: index.html
api/jam.exceptions.jose/: index.html
api/jam.exceptions.jwt/: index.html
api/jam.exceptions.oauth2/: index.html
api/jam.exceptions.paseto/: index.html
api/jam.exceptions.plugins/: index.html
api/jam.exceptions.sessions/: index.html
api/jam.ext/: index.html
api/jam.ext.fastapi/: index.html
api/jam.ext.flask/: index.html
api/jam.ext.flask.extensions/: index.html
api/jam.ext.flask.objects/: index.html
api/jam.ext.litestar/: index.html
api/jam.ext.litestar.middleware/: index.html
api/jam.ext.litestar.objects/: index.html
api/jam.ext.litestar.plugins/: index.html
api/jam.ext.starlette/: index.html
api/jam.ext.starlette.backends/: index.html
api/jam.ext.starlette.objects/: index.html
api/jam.instance/: index.html
api/jam.jose/: index.html
api/jam.jose.__algorithms__/: index.html
api/jam.jose.__base__/: index.html
api/jam.jose.jwe/: index.html
api/jam.jose.jwk/: index.html
api/jam.jose.jws/: index.html
api/jam.jose.jwt/: index.html
api/jam.jose.lists/: index.html
api/jam.jose.lists.__base__/: index.html
api/jam.jose.lists.json/: index.html
api/jam.jose.lists.memory/: index.html
api/jam.jose.lists.redis/: index.html
api/jam.jose.utils/: index.html
api/jam.jwt/: index.html
api/jam.jwt.__algorithms__/: index.html
api/jam.jwt.__base__/: index.html
api/jam.jwt.__types__/: index.html
api/jam.jwt.lists/: index.html
api/jam.jwt.lists.__base__/: index.html
api/jam.jwt.lists.json/: index.html
api/jam.jwt.lists.redis/: index.html
api/jam.jwt.module/: index.html
api/jam.jwt.utils/: index.html
api/jam.logger/: index.html
api/jam.oauth2/: index.html
api/jam.oauth2.__base__/: index.html
api/jam.oauth2.builtin/: index.html
api/jam.oauth2.builtin.github/: index.html
api/jam.oauth2.builtin.gitlab/: index.html
api/jam.oauth2.builtin.google/: index.html
api/jam.oauth2.builtin.yandex/: index.html
api/jam.oauth2.client/: index.html
assets/: roadmap.excalidraw
config/: index.html
configuration/: index.html
contributing/: index.html
docs/: CNAME  api.md  async.md  config.md  configuration.md  contributing.md  gen_api.py  index.md  install_unstable.md  installation.md  old_config.md  philosophy.md  quick.md  start.md  testing.md  unstable_changelog.md
install_unstable/: index.html
installation/: index.html
jam/: __abc_instances__.py  __core_staffs__.py  __init__.py  __modules__.py  config.py  instance.py  modules.py
old_config/: index.html
philosophy/: index.html
quick/: index.html
scripts/: rmcache.sh  work_time.py
search/: search_index.json
testing/: index.html
tests/: conftest.py  test_basic_jwt_manipulations.py
unstable_changelog/: index.html
(+575 files in other folders)
