[tool.poetry]
name = "jam"
version = "0.0.1"
description = "Simple and univirsal library for authorization"
authors = ["Makridenko Adrian <adrian.makridenko@proton.me>"]
license = "MIT"
readme = "README.md"
homepage = "https://jam.makridenko.ru"
repository = "https://github.com/lyaguxafrog/jam"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
pretty-errors = "^1.2.25"
icecream = "^2.1.3"
pre-commit = "^4.0.1"
flake8 = "^7.1.1"
isort = "^5.13.2"
black = "^24.10.0"


[tool.poetry.group.tests.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.49"

[tool.black]
line-length = 80
skip-string-normalization = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
