[project]
name = "jamlib"
version = "3.2.0b1"
description = "Simple and universal library for authorization."
authors = [
    {name = "Makridenko Adrian",email = "adrianmakridenko@duck.com"},
    {name = "Ksenia Travnikova",email = "kseniatravnikova@duck.com"}
]
license = {text = "Apache-2.0"}
readme = {file = "README.md", content-type = "text/markdown"}
keywords = [
    "Authentication",
    "Backend",
    "JWT",
    "Sessions",
    "OTP",
    "TOTP",
    "OAuth2",
    "Litestar",
    "FastAPI",
    "Starlette",
    "Flask"
]
requires-python = ">=3.10"
dependencies = [
    "cryptography>=46.0.5",
]

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
    "Typing :: Typed",
    "Framework :: Flask",
    "Framework :: FastAPI",
]

[project.urls]
Homepage = "https://jam.makridenko.ru"
Repository = "https://github.com/lyaguxafrog/jam"
Issues = "https://github.com/lyaguxafrog/jam/issues"
Changelog = "https://github.com/lyaguxafrog/jam/blob/master/CHANGELOG.md"


[project.scripts]
jam = "jam.cli:cli"

[project.optional-dependencies]
cli=["click>=8.3.1"]
redis=["redis>=7.3.0"]
json=["tinydb>=4.8.2"]
yaml=["pyyaml>=6.0.3"]
toml=["toml>=0.10.2"]
litestar=["litestar>=2.21.1"]
starlette=["starlette>=0.52.1"]
fastapi=["fastapi>=0.135.1"]
flask=["flask>=3.1.2"]

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["jam*"]

[dependency-groups]
dev = [
    "click>=8.3.1",
    "fakeredis>=2.34.1",
    "icecream>=2.1.10",
    "pre-commit>=4.5.1",
    "pyrefly>=0.56.0",
    "ruff>=0.15.6",
    "unicecream>=0.2.1",
    "uvicorn>=0.41.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.6.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.6.19",
    "mkdocstrings>=0.30.0",
    "mkdocstrings-python>=1.18.2",
    "termynal>=0.13.0",
]
tests = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "coverage>=7.13.4"
]


[tool.ruff]
target-version = "py310"
line-length = 80
ignore = ["UP009", "D100", "UP007"]
exclude = ["*__init__.py", "tests/", "*exceptions/", "env", ".env", ".env.example", "migrations/", ".venv/"]

[tool.ruff.lint]
extend-select = ["UP", "D", "I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["jam"]
split-on-trailing-comma = true
force-wrap-aliases = true
force-sort-within-sections = true
lines-after-imports = 2
lines-between-types = 1

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest]
python_files = ["test*.py"]
addopts = ["--capture=no"]
asyncio_default_fixture_loop_scope = "function"

[tool.unicecream]
exclude = ["__devtools/"]

[tool.pyrefly]
python_version = "3.10"
project_includes = ["src/jam/**/*.py"]
project_excludes = [
    ".venv",
    "venv",
    "build",
    "dist",
    "__pycache__",
    "tests/",
    "docs/",
]
